# tt-torch

./: .gitignore  .pre-commit-config.yaml  .test_durations  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README  README.md  analyze_model_coverage.py  benchmark_results_2025-03-30_main_230687d9.xlsx  benchmark_test_matrix.json  benchmark_test_matrix_splits.json  compare_test_results.py  convert_pip_reqs.py  cpumon.py  demo.py  gpt_oss.py  grok2.py  hello_world.py  huggingface_model_compatibility_spec.md  interp_without_pytest.py  memory_data_collection.py  model_coverage_analysis.txt  model_coverage_analysis_summary.md  pyproject.toml  read_results.json  requirements.txt  rti3.xslx  runLogs.txt  run_eval_1_data_parallel_tests.sh  run_full_model_tests.sh  run_interp_n_times.sh  setup.py  temp.py  temp.sh  test.py  test_gen.ttnn  test_xla_sharding_tt.py  ttrt-read.txt  (+1 more)
.github/: Dockerfile.base  Dockerfile.ci  Dockerfile.cibuildwheel  benchmark_durations.csv  build-docker-images.sh  get-docker-tag.sh
.github/ISSUE_TEMPLATE/: how_to.yml
.github/workflows/: build-and-test.yml  build-image.yml  build-torch-xla-wheel.yml  build-wheels.yml  check-runner.yml  codeql.yml  container-image-retention.yml  depth-benchmarks.yml  docs.yml  fail-inspector.yml  full-model-execution-test-matrix.yml  generate-benchmark-matrix-dynamic.yml  generate-benchmark-matrix.yml  generate-benchmark-report.yml  generate-mlir-dump.yml  generate-model-report.yml  generate-ttnn-md.yml  get_test_duration_from_junit_xmls.py  nightly-experimental-tests.yml  nightly-tests.yml  nightly-uplift.yml  on-community-issue.yml  on-pr-bot-review.yml  on-pr.yml  on-push.yml  pages.yml  perf-benchmark.yml  pre-commit.yml  produce_data.yml  quick-validation-test.yml  review-python.yml  run-build.yml  run-depth-benchmark-tests.yml  run-e2e-compile-tests.yml  run-e2e-tests.yml  run-experimental-full-model-execution-tests.yml  run-experimental-op-by-op-model-tests.yml  run-full-model-execution-tests-nightly.yml  run-full-model-execution-tests.yml  run-generic.yml  (+17 more)
demos/: conftest.py  example.py  llama3.2_generate_demo.py  pytest.ini  test_config.py  utils.py
demos/grok2/: .gitignore  README.md  SINGLE_LAYER_README.md  extract_grok_layer.py  grok2_demo.py  grok_single_layer_demo.py
demos/llama/: llama7b_pipeline_demo.py
demos/mnist/: mnist_data_parallel_async.py
demos/resnet/: README.md  mp_test.py  resnet50_compare_mp.py  resnet50_data_parallel_async.py  resnet50_data_parallel_async_threads.py  resnet50_data_parallel_demo.py  resnet50_data_parallel_demo_using_mp.py  resnet50_data_parallel_sync.py  resnet50_demo.py  resnet50_experimental_torch_xla_single_device_eager.py  resnet50_multi_device_single_thread.py  resnet50_multi_device_tt_mlir.py  resnet50_perf_demo.py  resnet50_single_vs_multi_device_compare.py  resnet_50_mp.py  single_device_async.py
demos/stable_diffusion/: sd_demo.py
docs/: build.md  controlling.md  generate_summary.py  index.md  pre_commit.md
docs/src/: SUMMARY.md  adding_models.md  build.md  controlling.md  convert_model_tutorial.md  getting_started.md  getting_started_build_from_source.md  getting_started_docker.md  overview.md  pre_commit.md  profiling.md  test.md
env/: activate
forge-agent/: README.md  adapt_gpt_oss_for_tenstorrent.py  requirements.txt  run_gpt_oss_inference.py  test_converted_gpt_oss.py  test_gpt_oss_models.py  test_hardware_execution.py  test_llm_pipeline.py  test_model_download.py  test_resnet_pipeline.py  test_resnet_search.py  test_tenstorrent_hardware.py
forge-agent/forge_agent/: main.py  pipeline.py
medium/: resnet.py
memory_results/: RMBG_20250324_202100.csv  RMBG_20250401_214931.csv  clip_20250324_193733.csv  clip_20250325_144747.csv  clip_20250325_182942.csv  clip_20250401_195739.csv  clip_20250401_195819.csv  clip_20250401_195832.csv  clip_20250401_195844.csv  clip_20250401_195900.csv  codegen_20250324_201910.csv  codegen_20250325_170333.csv  codegen_20250401_214725.csv  flan_t5_20250324_195647.csv  flan_t5_20250325_151308.csv  flan_t5_20250401_205002.csv  mgp-str-base_20250401_215434.csv  mgp_str_base_20250324_202333.csv  vilt_20250324_190748.csv  vilt_20250324_200001.csv  vilt_20250325_163904.csv  vilt_20250401_205548.csv
mlir_tests/: Autoencoder (linear).mlir  DETR.mlir  GLPN-KITTI.mlir  MLPMixer.mlir  Mnist.mlir  MobileNetSSD.mlir  MobileNetV2.mlir  OpenPose V2.mlir  Perceiver IO.mlir  ResNet18.mlir  ResNet50.mlir  SegFormer.mlir  SqueezeBERT.mlir  ViLT.mlir  YOLOv3.mlir  alibaba-damomgp-str-base.mlir  distilbert-base-uncased.mlir  microsoftbeit-base-patch16-224.mlir  microsoftbeit-large-patch16-224.mlir
mlir_tests/pytests/: test_autoencoder_linear.py  test_beit_base_patch16_224.py  test_beit_large_patch16_224.py  test_detr.py  test_distilbert_base_uncased.py  test_glpn_kitti.py  test_mgp_str_base.py  test_mlpmixer.py  test_mnist.py  test_mobilenetssd.py  test_mobilenetv2.py  test_openposev2.py  test_perceiverio.py  test_resnet18.py  test_resnet50.py  test_segformer.py  test_squeezebert.py  test_vilt.py  test_yolov3.py
model_test_results/: summary_20250320_194813.txt
outputs_from_parsing_script/: ttnn.add.json  ttnn.concat.json  ttnn.embedding.json  ttnn.empty.json  ttnn.from_device.json  ttnn.gelu.json  ttnn.get_device.json  ttnn.matmul.json  ttnn.multiply.json  ttnn.neg.json  ttnn.reciprocal.json  ttnn.reshape.json  ttnn.softmax.json  ttnn.sqrt.json  ttnn.subtract.json  ttnn.sum.json  ttnn.to_device.json  ttnn.to_layout.json  ttnn.transpose.json
results/: convert_to_conv2d_sweep.py  download_artifacts.py  extract_mlir_from_xls.py  lower_to_stablehlo.py  parse_op_by_op_results.py  parse_results.py  run_ttir_test.py
rti2/: iv_test_summary.txt
test/: conftest.py  test_basic.py  utils.py
tests/: conftest.py  test_basic.py  test_phi.py  utils.py
tests/experimental/: test_ccl_ops.py  test_ccl_ops_llmbox.py  test_ccl_ops_n300.py  test_ccl_ops_tp.py  (+2 more)
tools/: pytest_postprocess.py
tt_torch/: __init__.py
tt_torch/csrc/: CMakeLists.txt  bindings.cpp  tt-mlir-interface.cpp  tt-mlir-interface.hpp  tt_mlir_version.h.in
(+818 files in other folders)
